# ai-foundry-deployment-options

./: .gitignore  README.md  ai-foundry-config-testing.sln  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: bicep-ai-gateway-anthropic.yml  bicep-ai-gateway-basic.yml  bicep-ai-gateway-internal.yml  bicep-ai-gateway-litellm-cert.yml  bicep-ai-gateway-litellm.yml  bicep-ai-gateway-openrouter.yml  bicep-ai-gateway-pe-custom.yml  bicep-ai-gateway-pe-testing.yml  bicep-ai-gateway-pe.yml  bicep-ai-gateway-premium.yml  bicep-ai-gateway-quota.yml  bicep-ai-gateway.yml  bicep-azure-ml.yml  bicep-create-projects.yml  bicep-deploy-vm.yml  bicep-destroy-caphost.yml  bicep-fix-cosmos-permissions.yml  bicep-foundry-agents-vnet.yml  bicep-foundry-avm.yml  bicep-foundry-basic.yml  bicep-foundry-byo-vnet-no-dependencies.yml  bicep-foundry-byo-vnet.yml  bicep-foundry-external-ai-pe.yml  bicep-foundry-external-ai.yml  bicep-foundry-multi-region.yml  bicep-foundry-multi-rg.yml  bicep-foundry-multi-subscription-part0.yml  bicep-foundry-multi-subscription-part1.yml  bicep-foundry-multi-subscription-part2.yml  bicep-foundry-multi-subscription.yml  bicep-foundry-multi-vnet.yml  bicep-foundry-publish-to-teams.yml  bicep-foundry-rag-search.yml  bicep-foundry-search.yml  bicep-foundry-sk-agents.yml  bicep-foundry-two-projects.yml  bicep-litellm.yml  bicep-option-ai-gateway-basic.yml  bicep-option-ai-gateway-internal.yml  bicep-option-ai-gateway-openrouter.yml  (+8 more)
Landing zone samples/2-shared-models/: README.md
agents/: pyproject.toml  testing-agents.ipynb  testing-embeddings.ipynb  weather.json
agents_anthropic/: .env.example  anthropic-gateway.ipynb  pyproject.toml
agents_v2/: .env.example  README.md  create_agents.py  gateway-random-traffic.ipynb  pyproject.toml  testing-llm-gateway-agents.ipynb
agents_v2/src/: agents_utils.py  app_logging.py  foundry_utils.py
agents_v2_maf/: .env.example  pyproject.toml  testing-agents-maf.ipynb
agents_v2_maf_csharp/: .env.example  ai-foundry-config-testing.sln
agents_v2_maf_csharp/AgentFrameworkTests/: AgentFrameworkTests.csproj  Program.cs
hosted-agent/: README.md  azure.yaml
options-infra/: bicepconfig.json  landing-zone.bicep  main-option-1.bicep  main-option-10.bicep  main-option-11-part0.bicep  main-option-11-part1.bicep  main-option-2.bicep  main-option-3.bicep  main-option-4.bicep  main-option-5.bicep  main-option-6.bicep  main-option-7.bicep  main-option-8.bicep  main-option-9.bicep
options-infra/ai-gateway/: README.md  azure.yaml  main.bicep  main.bicepparam
options-infra/ai-gateway-anthropic/: README.md  azure.yaml  main.bicep  main.bicepparam
options-infra/ai-gateway-basic/: README.md  azure.yaml  main.bicep  main.bicepparam
options-infra/ai-gateway-existing/: README.md  azure.yaml  main.bicep  main.bicepparam
options-infra/ai-gateway-internal/: README.md  azure.yaml  main.bicep  main.bicepparam
options-infra/ai-gateway-litellm/: README.md  azure.yaml  main.bicep  main.bicepparam
options-infra/ai-gateway-litellm-cert/: README.md  azure.yaml  main.bicep  main.bicepparam
options-infra/ai-gateway-openrouter/: README.md  azure.yaml  main.bicep  main.bicepparam
options-infra/ai-gateway-pe/: README.md  azure.yaml  main.bicep  main.bicepparam
options-infra/ai-gateway-pe-custom/: README.md  azure.yaml  main.bicep  main.bicepparam
options-infra/ai-gateway-pe-testing/: README.md  azure.yaml  main.bicep  main.bicepparam
options-infra/ai-gateway-pe/tests/: README.md  pyproject.toml  test_realtime_gateway.py
options-infra/ai-gateway-premium/: README.md  azure.yaml  main.bicep  main.bicepparam
options-infra/ai-gateway-quota/: .gitignore  AGENTS.md  README.md  TODO.md  azure.yaml  main.bicep  main.bicepparam  main.json  main_old.bicep  old_policy_quota.xml  policy_priority.xml  policy_quota.xml
options-infra/ai-gateway-quota/tests/: .env.example  README.md  TEST_RESULTS.md  conftest.py  pyproject.toml  test_agent_service.py  test_gateway.py  test_priority_gateway.ipynb
options-infra/ai-gateway-quota/tests/gateway/: __init__.py  config.py
options-infra/azure-ml/: README.md  azure.yaml  main.bicep
options-infra/foundry-perf-testing/services/mcp-server/: Dockerfile  pyproject.toml
options-infra/foundry-perf-testing/services/mcp-server/app/: main.py
options-infra/foundry-rag-search/scripts/: create_index.py  pyproject.toml  setup_indexer_pipeline.py
options-infra/foundry-rag-search/scripts/agents_v1/: create_agents_v1.py
options-infra/foundry-rag-search/scripts/agents_v2/: create_agents_v2.py  pyproject.toml
options-infra/foundry-sk-agents/apps/sk-agents/: Dockerfile  agent_manager.py  agent_manager_new.py  config.py  instructions.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  telemetry.py  templates.py  test.py
options-infra/foundry-sk-agents/apps/sk-agents/agents/: __init__.py  base.py  large_context_agent.py  master_agent.py  mock_responses.py
options-infra/foundry-sk-agents/apps/sk-agents/plugins/: __init__.py  file_processor.py  knowledge.py  large_context_agent.py
subscription-manager/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
subscription-manager/.github/: copilot-instructions.md
subscription-manager/app/: __init__.py  cli.py  config.py  main.py
subscription-manager/app/models/: subscription.py  usage.py
subscription-manager/app/routers/: subscriptions.py  usage.py
subscription-manager/app/services/: apim_service.py  usage_service.py
subscription-manager/app/static/css/: custom.css
subscription-manager/app/static/js/: main.js
subscription-manager/app/templates/: base.html  index.html  subscription_detail.html  subscriptions.html
subscription-manager/app/templates/partials/: daily_usage_table.html  recent_subscriptions.html  stats_cards.html  subscription_detail.html  subscription_usage_chart.html  subscriptions_table.html  top_consumers.html  usage_chart.html
subscription-manager/tests/: test_api.py  test_e2e.py
utils/: .env.example  network-secured-agent-setup.ipynb  network-secured-agent.http  test.http
(+388 files in other folders)
