[project]
name = "agents-anthropic"
version = "0.1.0"
description = "Test notebooks for Anthropic Claude via APIM AI Gateway"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "azure-ai-projects>=2.0.1",
    "azure-identity>=1.25.0",
    "ipykernel>=6.30.1",
    "openai>=1.50.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.0",
    "sseclient-py>=1.8.0",
]
