[project]
name = "agents-v2-maf"
version = "0.1.0"
description = "Testing agents using Microsoft Agent Framework (agent-framework)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework-foundry>=1.0.1",
    "aiohttp>=3.13.5",
    "azure-identity>=1.25.0",
    "ipykernel>=6.30.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
]

[tool.uv.workspace]
members = [
    ".",
]
