[project]
name = "subscription-manager"
version = "0.1.0"
description = "API Management Subscription Manager for LLM Access"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "azure-identity>=1.19.0",
    "azure-mgmt-apimanagement>=4.0.0",
    "azure-monitor-query>=1.4.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
start = "app.cli:main"
test = "pytest:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-env>=1.1.0",
    "pytest-playwright>=0.5.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
env = [
    "USE_MOCK_DATA=true",
]
markers = [
    "e2e: End-to-end tests using Playwright",
]
