[project]
name = "ai-gateway-pe-tests"
version = "0.1.0"
description = "Realtime (WebSocket) gateway tests for ai-gateway-pe"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "azure-identity>=1.25.0",
    "openai>=2.31.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.1.1",
    "websockets>=14.0",
]

[tool.uv.workspace]
members = [
    ".",
]
