[project]
name = "ai-gateway-quota-tests"
version = "0.1.0"
description = "Live pytest integration suite for the ai-gateway-quota APIM deployment"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.0",
    "anthropic>=0.75.0",
    "azure-ai-projects==2.0.1",
    "azure-identity>=1.25.0",
    "httpx>=0.28.0",
    "msal>=1.34.0",
    "openai>=2.0.0",
    "pyjwt>=2.10.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "websockets>=15.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
addopts = "-v -s --tb=short -ra"
testpaths = ["."]
python_files = ["test_*.py"]
asyncio_mode = "auto"
