[project]
name = "mcp-server"
version = "0.1.0"
description = "FastMCP case-management server for the Foundry perf-testing scenario."
requires-python = ">=3.13"
dependencies = [
  "fastmcp>=2.11.0",
  "uvicorn>=0.35.0",
  "azure-monitor-opentelemetry>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
